<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_setting" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/layout_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_main_bend_bottom" >

            <ImageView
                android:id="@+id/image_my_profile"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:contentDescription="@null"
                android:src="@drawable/image_my_profile" />

            <TextView
                android:id="@+id/my_profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_my_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/My_Profile"
                android:textColor="#5db2e8" />

            <ImageView
                android:id="@+id/image_title_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/my_profile_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:contentDescription="@null"
                android:src="@drawable/image_title_logo" />

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="35dp"
                android:contentDescription="@null"
                android:padding="10dp"
                android:src="@drawable/button_left_no_font" />

            <com.lgb.myfitness.view.TextViewShow
                android:id="@+id/progerss_textviewshow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="22dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="30dp"
                android:text="@string/Back"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="35dp"
                android:contentDescription="@null"
                android:padding="10dp"
                android:src="@drawable/button_right_no_font" />

            <com.lgb.myfitness.view.TextViewShow_
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="22dp"
                android:layout_marginTop="22dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="30dp"
                android:text="@string/Save"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/view_scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/layout_title"
            android:layout_marginTop="@dimen/tab_height" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" >

                    <RadioGroup
                        android:id="@+id/group_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio_man"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_man_selector"
                            android:button="@null" />

                        <RadioButton
                            android:id="@+id/radio_woman"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:background="@drawable/button_woman_selector"
                            android:button="@null" />
                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/group_gender"
                        android:layout_alignRight="@id/group_gender"
                        android:layout_below="@id/group_gender"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/text_male"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/MALE"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/text_female"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/FEMALE"
                            android:textColor="@android:color/white" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_line_first"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/Name"
                        android:textColor="@android:color/white" />

                    <EditText
                        android:id="@+id/edit_name"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:hint="@string/Name"
                        android:inputType="text"
                        android:labelFor="@id/edit_name"
                        android:maxLength="20"
                        android:minWidth="50dp"
                        android:orientation="horizontal"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_line_middle"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_age_label"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/Age"
                        android:textColor="@android:color/white" />

                    <EditText
                        android:id="@+id/edit_age"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:hint="@string/Age_18"
                        android:inputType="number"
                        android:labelFor="@id/edit_age"
                        android:maxLength="3"
                        android:minWidth="50dp"
                        android:orientation="horizontal"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_line_middle"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_height_label"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/height_cm"
                        android:textColor="@android:color/white" />

                    <EditText
                        android:id="@+id/edit_height"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:hint="@string/height_example"
                        android:inputType="number"
                        android:labelFor="@id/edit_height"
                        android:maxLength="5"
                        android:minWidth="50dp"
                        android:orientation="horizontal"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_line_last"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_weight_label"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/Weight_kg"
                        android:textColor="@android:color/white" />

                    <EditText
                        android:id="@+id/edit_weight"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:hint="@string/weight_example"
                        android:inputType="number"
                        android:labelFor="@id/edit_weight"
                        android:maxLength="5"
                        android:minWidth="50dp"
                        android:orientation="horizontal"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/Set_Your_Goal_"
                        android:textColor="@android:color/holo_orange_dark" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/edit_goal_weight"
                            android:layout_width="80dp"
                            android:layout_height="40dp"
                            android:gravity="right|center_vertical"
                            android:hint="@string/weight_goal_example"
                            android:inputType="number"
                            android:labelFor="@id/edit_goal_weight"
                            android:maxLength="5"
                            android:orientation="horizontal"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/darker_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/kg"
                            android:layout_gravity="center_vertical"
                            android:textColor="@android:color/white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>