<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_bpm" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/version_code"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/declaration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_settings_item"
            android:drawableRight="@drawable/button_setting_right_arrow"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/declaration"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/impressum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_settings_item"
            android:drawableRight="@drawable/button_setting_right_arrow"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/impressum"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_main_bend_bottom" >

        <ImageView
            android:id="@+id/image_setting"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@null" />

        <ImageView
            android:id="@+id/image_title_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_setting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@null"
            android:src="@drawable/image_title_logo" />

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/button_left_no_font" />

        <com.lgb.myfitness.view.TextViewShow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="22dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="30dp"
            android:text="@string/Back"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</LinearLayout>